<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012-2013 Trento RISE
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
         http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either   express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>

    <string name="app_name">ViviTrento</string>
    <string name="empty" />
    <string name="slidingmenu_home">Home</string>
    <string name="allevents">All events</string>
    <string name="allpois">All places</string>
    <string name="createevent">Create event</string>
    <string name="myevents">My events</string>
    <string name="mystory">My Story</string>
    <string name="create_title">Title</string>
    <string name="create_description">Description</string>
    <string name="createevent_date">Date</string>
    <string name="createevent_timestart">Start</string>
    <string name="createevent_timeend">End</string>
    <string name="createevent_timing">Time</string>
    <string name="createevent_timing_hint">18:00 - 20:00</string>
    <string name="createevent_timestarthint">12:00</string>
    <string name="createevent_datehint">24/07/2012</string>
    <string name="createevent_timeendhint">18:00</string>
    <string name="create_place">Place</string>
    <string name="create_placehint">Current location</string>
    <string name="create_tagshint">Party, costume, fun</string>
    <string name="create_cat">Category</string>
    <string name="create_cathint">Party, concert, movie</string>
    <string name="create_notes">Notes</string>
    <string name="create_noteshint">Other information</string>
    <string name="menu_item_addpoi_text">Add place</string>
    <string name="menu_item_addstory_text">Add a story</string>
    <string name="menu_item_mystories_text">My stories</string>
    <string name="createpoi">Create place</string>
    <string name="createstory">Create story</string>
    <string name="createpoi_ot">Opening times</string>
    <string name="createpoi_othint">12:00&#8211;18:00</string>
    <string name="menu_item_addevent_text">Add event</string>
    <string name="menu_item_myevents_text">My events</string>
    <string name="menu_item_layers_text">Layers</string>
    <string name="maps_api_key">0fdlLrw2lMFFg-TnfYFuceTi0m60-Q1mBF6EMFA</string>
    <string name="menu_item_poicategory_text">Place categories</string>
    <string name="related_poi">Related place</string>
    <string name="related_events">Related events</string>
    <string name="getdir">Directions</string>
    <string name="onmap">See on map</string>
    <string name="poi_select_address_content_description">Select an address on the map</string>
    <string name="layers_title">What would you like to see?</string>
    <string name="tmp">Coming soon!</string>
    <string name="search_txt">Search</string>
    <string name="join">Join event</string>
    <string name="map_view">View on map</string>
    <string name="list_view">View as list</string>
    <string name="overflow">More</string>
    <string name="rate">Rate</string>
    <string name="attend">Attend</string>
    <string name="add_my_stories">Add to my stories</string>
    <string name="delete_my_stories">Remove from my stories</string>
        
    <string name="attend_not">Not attend</string>
    <string name="follow">Follow</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="attendees">Attendees</string>
    <string name="attendees_num">0</string>
    <string name="source_smartcampus">SmartCampus</string>
    <string name="app_failure_init">Failed to initialize ViviTrento application</string>
    <string name="app_failure_security">Failed to retrieve authentication data</string>
    <string name="app_failure_setup">Failed to initialize appplication</string>
    <string name="app_failure_operation">OOPS! An error occurred. Please check your connection or try again later</string>
    <string name="app_failure_cannot_delete">Object cannot be deleted.</string>
    <string name="app_failure_obj_not_found">Object not found!</string>
    <string name="ratingtext">Community rating:</string>
    <string name="attendees_extended"> people are attending this event.</string>
    <string name="attendees_story_extended"> people are attending this story.</string>
    <string name="rating_dialog_title">Rate this place:</string>
    <string name="noevents">No events available in this category! </string>
    <string name="backstring">Back</string>
    <string name="showdetails">Details&#8230;</string>
    <string name="comments">Comments:</string>
    <string name="menu_item_import_text">Import .ics file</string>
    <string name="upload_file">Choose file:</string>
    <string name="file_hint">Browse&#8230;</string>
    <string name="apply_to_all_text">Apply to all</string>
    <string name="app_uid_label">SmartCampus</string>
    
    <string name="tags_successfully_added">Tags successfully saved.</string>
    
    <string name="select_poi_title">Select event location</string>
    
    <string name="content_empty">No items.</string>
    
    <string name="address_select_toast">Keep your finger pressed to select a location</string>
    
    <string name="rating_success">Your rating has been saved</string>
    <string name="attend_success">You will attend this event!</string>
    <string name="not_attend_success">You will not attend this event!</string>

    <string name="attend_story_success">Story is added to my stories!</string>
    <string name="not_attend_story_success">Story is removed from my stories!</string>
    <string name="event_create_success">Event successfully created!</string>
    <string name="story_create_success">Story successfully created!</string>
    <string name="poi_create_success">Place successfully created!</string>
    <string name="update_success">Your modifications have been saved</string>
    <string name="add_step">Add step</string>
    <string name="start_story">Start</string>
    <string name="map_poi_cancel">Cancel</string>
    <string name="map_poi_ok">OK</string>
    <string name="step">Steps:</string>
    <string name="createstep">Create step</string>
    <string name="prev_step">Previous</string>
    <string name="poi_erased">Place erased by user</string>
    <string name="next_step">Next</string>

    <string name="empty_step_title">The Place must not be empty</string>
    <string name="sure_delete_step">Are you sure you want to delete the step?</string>

    <string name="msg_field_required"> is required.</string>
    
    <string name="sure_change">Overwrite the previous data?</string>
    <string name="add">Add</string>
    <string name="event">event</string>
    <string name="story">story</string>
    <string name="place">place</string>
	<string name="list_event_today">Today</string> 
	<string name="list_event_tomorrow">Tomorrow</string>    
	<string name="menu_item_todayevent_text">Today\'s Events</string>
	
	<string name="tab_home">Home</string>
	<string name="tab_places">Places</string>
	<string name="tab_events">Events</string>
	<string name="tab_stories">Stories</string>
	
	<string name="categories_event_concert">Concerts</string>
	<string name="categories_event_happyhour">Happy hours</string>
	<string name="categories_event_movie">Movies</string>
	<string name="categories_event_party">Parties</string>
	<string name="categories_event_seminar">Seminars</string>
	<string name="categories_event_theater">Theaters</string>
	<string name="categories_event_exhibition">Exhibitions</string>
	<string name="categories_event_generic">Other event</string>
	
	<string name="categories_poi_museum">Museums</string>
	<string name="categories_poi_mobility">Mobility</string>
	<string name="categories_poi_parking">Parkings</string>
	<string name="categories_poi_office">Offices</string>
	<string name="categories_poi_theater">Theaters</string>
	<string name="categories_poi_university">University</string>
	<string name="categories_poi_accommodation">Accommodation</string>
	<string name="categories_poi_library">Libraries</string>
	<string name="categories_poi_food">Food</string>
	<string name="categories_poi_drink">Drink</string>
	<string name="categories_poi_cinema">Cinemas</string>
	<string name="categories_poi_generic">Other place</string>
	
	<string name="categories_story_leisure">Leisure</string>
	<string name="categories_story_offices_and_services">Offices and Services</string>
	<string name="categories_story_university">University</string>
	<string name="categories_story_culture">Culture</string>
	<string name="categories_story_generic">Other story</string>
	
	<string name="search_for">Search for</string>
	<string name="search_in_category">in category</string>
	<string name="search_today_events">Search today\'s events</string>
	
	<string name="toast_is_required">is required.</string>
	<string name="toast_incorrect">Incorrect</string>
    
	<string name="eventlist_at_place">Events at</string>
	
	<string name="toast_my_events_clicked">My events clicked</string>
	<string name="toast_browsing_your_files">Browsing your files&#8230;</string>
	<string name="toast_event_saved">Event saved!</string>
	<string name="toast_poi_shared">POI shared.</string>
	
	

		
	
</resources>
